--- a/styles/global.css
+++ b/styles/global.css
@@ -160,18 +160,26 @@ form.search__form::after {
     padding: 0;
     margin-top: 40px;
 }
-.pagination li a {
+.pagination li a,
+.pagination li a:hover {
     display: flex;
     align-items: center;
     height: 100%;
     padding: 0 10px;
     cursor: pointer;
 }
-.pagination li a:hover {
-    text-decoration: underline;
-}
 .pagination li.active a {
     font-weight: bold;
     text-decoration: underline;
     pointer-events: none;
+}
+
+.pagination .disabled > a,
+.pagination .disabled > a:focus,
+.pagination .disabled > a:hover,
+  {
+    cursor: not-allowed;
+    color: #777;
+    border-color: #ddd;
+    text-decoration: none;
 }
